🚧 Flow updates and presenting events

--- a/event-manager-ios/Storyboards/egabor.storyboard
+++ b/event-manager-ios/Storyboards/egabor.storyboard
@@ -98,7 +98,8 @@
                     <view key="view" contentMode="scaleToFill" id="1N7-se-9t0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="1sB-Xe-daD"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lmy-GS-Bqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
