--- a/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
+++ b/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -208,25 +209,69 @@
                                 <rect key="frame" x="0.0" y="128" width="375" height="426"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" id="2OT-SI-w5T" customClass="EventCell" customModule="event_manager_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="162" id="2OT-SI-w5T" customClass="EventCell" customModule="event_manager_ios" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="162"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2OT-SI-w5T" id="P6S-2q-V1D">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="161.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ztj-xc-7J3">
-                                                    <rect key="frame" x="22" y="11" width="173" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ztj-xc-7J3">
+                                                    <rect key="frame" x="66" y="8" width="259" height="116.5"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vG6-BJ-nKC">
+                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="jb3-R3-4p2"/>
+                                                        <constraint firstAttribute="width" secondItem="vG6-BJ-nKC" secondAttribute="height" multiplier="1:1" id="rVq-LG-6MP"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aol-El-ls2">
+                                                    <rect key="frame" x="327" y="61" width="40" height="40"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="WtX-cj-NJN"/>
+                                                        <constraint firstAttribute="width" secondItem="aol-El-ls2" secondAttribute="height" multiplier="1:1" id="efN-Mg-WDG"/>
+                                                    </constraints>
+                                                    <state key="normal" image="favorite"/>
+                                                    <state key="selected" image="favorite_filled"/>
+                                                    <connections>
+                                                        <action selector="toggleFavorite:" destination="2OT-SI-w5T" eventType="touchUpInside" id="udp-Qe-Tus"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Péntek 10.28" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Cv-Xg-M25">
+                                                    <rect key="frame" x="66" y="132.5" width="259" height="21"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="7Cv-Xg-M25" firstAttribute="top" secondItem="ztj-xc-7J3" secondAttribute="bottom" constant="8" id="1an-z9-Cfi"/>
+                                                <constraint firstItem="7Cv-Xg-M25" firstAttribute="leading" secondItem="vG6-BJ-nKC" secondAttribute="trailing" constant="8" id="2bb-h2-A8W"/>
+                                                <constraint firstItem="aol-El-ls2" firstAttribute="centerY" secondItem="P6S-2q-V1D" secondAttribute="centerY" id="6Nk-gq-tVU"/>
+                                                <constraint firstItem="ztj-xc-7J3" firstAttribute="top" secondItem="P6S-2q-V1D" secondAttribute="top" constant="8" id="Bn5-Gg-Hcb"/>
+                                                <constraint firstItem="aol-El-ls2" firstAttribute="leading" secondItem="ztj-xc-7J3" secondAttribute="trailing" constant="2" id="HNd-d4-dXm"/>
+                                                <constraint firstItem="ztj-xc-7J3" firstAttribute="leading" secondItem="vG6-BJ-nKC" secondAttribute="trailing" constant="8" id="YNv-Tb-QSn"/>
+                                                <constraint firstItem="vG6-BJ-nKC" firstAttribute="leading" secondItem="P6S-2q-V1D" secondAttribute="leading" constant="8" id="Zei-46-NXf"/>
+                                                <constraint firstItem="aol-El-ls2" firstAttribute="leading" secondItem="7Cv-Xg-M25" secondAttribute="trailing" constant="2" id="i3R-Ra-ha2"/>
+                                                <constraint firstAttribute="bottom" secondItem="7Cv-Xg-M25" secondAttribute="bottom" constant="8" id="l31-yb-COb"/>
+                                                <constraint firstAttribute="trailing" secondItem="aol-El-ls2" secondAttribute="trailing" constant="8" id="xDd-DX-3Fm"/>
+                                                <constraint firstItem="vG6-BJ-nKC" firstAttribute="top" secondItem="P6S-2q-V1D" secondAttribute="top" constant="8" id="zJx-AA-y24"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="infoLabel" destination="7Cv-Xg-M25" id="BjJ-4h-Qht"/>
                                             <outlet property="nameLabel" destination="ztj-xc-7J3" id="6Ib-a2-s4B"/>
+                                            <outlet property="performerImageView" destination="vG6-BJ-nKC" id="klI-AG-JQq"/>
+                                            <outlet property="toggleFavoriteButton" destination="aol-El-ls2" id="Ayn-q6-aQp"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -275,6 +320,7 @@
                     <connections>
                         <outlet property="tableView" destination="ZOI-83-O0Y" id="afD-Bf-cbV"/>
                         <segue destination="4x3-da-nLW" kind="show" identifier="ShowProfile" id="9Qy-Gf-gKA"/>
+                        <segue destination="L4h-S1-xy1" kind="show" identifier="ShowEventDetails" id="zoX-68-gK2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fuh-a1-FOi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -289,7 +335,7 @@
                     </items>
                 </toolbar>
             </objects>
-            <point key="canvasLocation" x="508" y="-940"/>
+            <point key="canvasLocation" x="508" y="-940.47976011994012"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="vJ5-ov-Rr4">
@@ -304,7 +350,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qxs-jt-Y1T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1287" y="-1184"/>
+            <point key="canvasLocation" x="1308" y="-1183"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="J8R-GM-qAd">
+            <objects>
+                <viewController id="L4h-S1-xy1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FGH-yj-AM8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="0mZ-IP-4gs"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="P6B-eg-ncY">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="Wa1-Ea-qhT"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Row-Ae-7fr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2060" y="-962"/>
         </scene>
         <!--ProfileViewController-->
         <scene sceneID="BtC-qz-bcv">
@@ -312,13 +376,15 @@
                 <viewControllerPlaceholder storyboardName="Profile" referencedIdentifier="ProfileViewController" id="4x3-da-nLW" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zbM-IW-pWE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1181" y="-941"/>
+            <point key="canvasLocation" x="507" y="-542"/>
         </scene>
     </scenes>
     <resources>
+        <image name="favorite" width="25" height="25"/>
+        <image name="favorite_filled" width="25" height="25"/>
         <image name="profile" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="lrf-W2-5h5"/>
+        <segue reference="9Qy-Gf-gKA"/>
     </inferredMetricsTieBreakers>
 </document>
