--- a/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
+++ b/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
@@ -57,6 +57,9 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Friends" id="zxP-i6-dHS">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="profile" id="2Ce-Kp-DJz"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="Friends.Title"/>
+                        </userDefinedRuntimeAttributes>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c9J-5N-cCW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -88,6 +91,9 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="News" id="w0e-0X-tu3">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="profile" id="Qah-d1-D8W"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="News.Title"/>
+                        </userDefinedRuntimeAttributes>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r4m-FE-J7A" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -171,6 +177,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Map" id="Mcu-zm-sYI">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="profile" id="NAS-bO-Vxi"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="Map.Title"/>
+                        </userDefinedRuntimeAttributes>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gwZ-G7-IKY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -331,6 +340,9 @@
                                 <segue destination="4x3-da-nLW" kind="show" id="lrf-W2-5h5"/>
                             </connections>
                         </barButtonItem>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="Events.Title"/>
+                        </userDefinedRuntimeAttributes>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="ZOI-83-O0Y" id="afD-Bf-cbV"/>
@@ -458,7 +470,7 @@
                                                             <rect key="frame" x="338.5" y="0.0" width="20.5" height="20.5"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ticket" translatesAutoresizingMaskIntoConstraints="NO" id="j0S-p1-u2m">
-                                                                    <rect key="frame" x="5" y="5" width="10.5" height="10.5"/>
+                                                                    <rect key="frame" x="4" y="4" width="12.5" height="12.5"/>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="j0S-p1-u2m" secondAttribute="height" multiplier="1:1" id="nrh-XL-XDw"/>
@@ -470,7 +482,7 @@
                                                                 <constraint firstAttribute="width" secondItem="t0b-hH-QNu" secondAttribute="height" multiplier="1:1" id="1UW-Ba-r9q"/>
                                                                 <constraint firstItem="j0S-p1-u2m" firstAttribute="centerX" secondItem="t0b-hH-QNu" secondAttribute="centerX" id="1Xp-wX-PhI"/>
                                                                 <constraint firstItem="j0S-p1-u2m" firstAttribute="centerY" secondItem="t0b-hH-QNu" secondAttribute="centerY" id="9eN-QG-ESt"/>
-                                                                <constraint firstItem="j0S-p1-u2m" firstAttribute="width" secondItem="t0b-hH-QNu" secondAttribute="width" multiplier="0.5" id="iap-Y9-uyI"/>
+                                                                <constraint firstItem="j0S-p1-u2m" firstAttribute="width" secondItem="t0b-hH-QNu" secondAttribute="width" multiplier="0.6" id="iap-Y9-uyI"/>
                                                             </constraints>
                                                         </view>
                                                     </subviews>
@@ -482,7 +494,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="21" height="20.5"/>
                                                             <subviews>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook_f" translatesAutoresizingMaskIntoConstraints="NO" id="5lH-6J-ulp">
-                                                                    <rect key="frame" x="5" y="5" width="10" height="10"/>
+                                                                    <rect key="frame" x="3.5" y="3.5" width="13" height="13"/>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="5lH-6J-ulp" secondAttribute="height" multiplier="1:1" id="Yk1-TD-gP2"/>
@@ -492,7 +504,7 @@
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <constraints>
                                                                 <constraint firstItem="5lH-6J-ulp" firstAttribute="centerY" secondItem="3lx-oV-HMX" secondAttribute="centerY" id="Ntn-Yy-6RV"/>
-                                                                <constraint firstItem="5lH-6J-ulp" firstAttribute="width" secondItem="3lx-oV-HMX" secondAttribute="width" multiplier="0.5" id="dY4-0U-e5b"/>
+                                                                <constraint firstItem="5lH-6J-ulp" firstAttribute="width" secondItem="3lx-oV-HMX" secondAttribute="width" multiplier="0.6" id="dY4-0U-e5b"/>
                                                                 <constraint firstAttribute="width" secondItem="3lx-oV-HMX" secondAttribute="height" multiplier="1:1" id="wTx-fu-JhB"/>
                                                                 <constraint firstItem="5lH-6J-ulp" firstAttribute="centerX" secondItem="3lx-oV-HMX" secondAttribute="centerX" id="xPq-of-0IS"/>
                                                             </constraints>
@@ -537,15 +549,23 @@
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSj-kj-LXx">
                                                     <rect key="frame" x="0.0" y="0.0" width="178.5" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                     <state key="normal" title="Button" backgroundImage="Button">
                                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="EventDetails.Button.SeeAll.Title"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cdy-dU-HLC">
                                                     <rect key="frame" x="180.5" y="0.0" width="178.5" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                     <state key="normal" title="Button" backgroundImage="Button">
                                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="EventDetails.Button.RelatedEvents.Title"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </button>
                                             </subviews>
                                         </stackView>
@@ -599,7 +619,7 @@
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahL-0Z-qUf">
                                         <rect key="frame" x="8" y="120.5" width="359" height="22.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -649,6 +669,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Details" id="P6B-eg-ncY">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="favorite" id="Wa1-Ea-qhT"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="EventDetails.Title"/>
+                        </userDefinedRuntimeAttributes>
                     </navigationItem>
                     <connections>
                         <outlet property="facebookEventLabel" destination="V0W-rb-B0w" id="F0M-5q-fI5"/>
